package edu.fiuba.algo3.modelo.mazo;

import java.util.Map;

public interface ConfiguracionDeMazo {
    void obtenerConfig(Map<String, Integer> configuracion);
}
